--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     ></script>
     <script src="csi.min.js"></script>
   </head>
+
   <body>
     <div class="loader-div" id="loaderDiv" onload="checkForTop();">
       <div class="loader-container">
@@ -80,23 +81,63 @@
       </div>
 
       <div class="main">
-        <h2 class="download">Vehicles Text Maze</h2>
-        <div class="pdf-class">
-          <a href="docs/VehiclesTextMaze.pdf">
-            <img src="img/VehiclesTextMaze.jpg" alt="vehicles text maze"
-          /></a>
+        <div class="mazes">
+          <h2 class="download">Vehicles Text Maze</h2>
+          <div class="pdf-class">
+            <a href="docs/VehiclesTextMaze.pdf">
+              <img src="img/VehiclesTextMaze.jpg" alt="vehicles text maze"
+            /></a>
+          </div>
+          <h2 class="download">Christmas Text Maze</h2>
+          <div class="pdf-class">
+            <a href="docs/ChristmasTextMaze.pdf">
+              <img src="img/ChristmasTextMaze.jpg" alt="Christmas text maze"
+            /></a>
+          </div>
+          <h2 class="download">Clothes Text Maze</h2>
+          <div class="pdf-class">
+            <a href="docs/ClothesTextMaze.pdf">
+              <img src="img/ClothesTextMaze.jpg" alt="clothes text maze"
+            /></a>
+          </div>
         </div>
-        <h2 class="download">Christmas Text Maze</h2>
-        <div class="pdf-class">
-          <a href="docs/ChristmasTextMaze.pdf">
-            <img src="img/ChristmasTextMaze.jpg" alt="Christmas text maze"
-          /></a>
-        </div>
-        <h2 class="download">Clothes Text Maze</h2>
-        <div class="pdf-class">
-          <a href="docs/ClothesTextMaze.pdf">
-            <img src="img/ClothesTextMaze.jpg" alt="clothes text maze"
-          /></a>
+        <div class="sense-container">
+          <div class="sense">
+            <script
+              async
+              src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+            ></script>
+            <!-- Vertical ad -->
+            <ins
+              class="adsbygoogle"
+              style="display: block"
+              data-ad-client="ca-pub-6192312197226967"
+              data-ad-slot="3073690633"
+              data-ad-format="auto"
+              data-full-width-responsive="true"
+            ></ins>
+            <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+          </div>
+          <div class="sense">
+            <script
+              async
+              src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+            ></script>
+            <!-- Vertical ad -->
+            <ins
+              class="adsbygoogle"
+              style="display: block"
+              data-ad-client="ca-pub-6192312197226967"
+              data-ad-slot="3073690633"
+              data-ad-format="auto"
+              data-full-width-responsive="true"
+            ></ins>
+            <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+          </div>
         </div>
       </div>
 
