--- a/index.html
+++ b/index.html
@@ -80,23 +80,48 @@
       </div>
 
       <div class="main">
+        <div class="item1">
+        <h2 class="download">Frequency Adverbs Text Maze</h2>
+        <div class="pdf-class">
+          <a href="docs/FrequencyAdverbsTextMaze.pdf">
+            <img src="img/FrequencyAdverbsTextMaze.jpg" alt="vehicles text maze"
+          /></a>
+        </div>
+        </div>
+         <div class="item2">
+        <h2 class="download">Past Simple Text Maze</h2>
+        <div class="pdf-class item2">
+          <a href="docs/PastSimpleTextMaze.pdf">
+            <img src="img/PastSimpleTextMaze.jpg" alt="vehicles text maze"
+          /></a>
+        </div>
+        </div>
+        <div class="item3">
+
+        <h2 class="download">Christmas Text Maze</h2>
+        <div class="pdf-class item3">
+          <a href="docs/ChristmasTextMaze.pdf">
+            <img src="img/ChristmasTextMaze.jpg" alt="Christmas text maze"
+          /></a>
+        </div>
+        </div>
+                 <div class="item4">
+
+        <h2 class="download">Clothes Text Maze</h2>
+        <div class="pdf-class item4">
+          <a href="docs/ClothesTextMaze.pdf">
+            <img src="img/ClothesTextMaze.jpg" alt="clothes text maze"
+          /></a>
+        </div>
+                 </div>
+
+                      <div class="item5">
         <h2 class="download">Vehicles Text Maze</h2>
         <div class="pdf-class">
           <a href="docs/VehiclesTextMaze.pdf">
             <img src="img/VehiclesTextMaze.jpg" alt="vehicles text maze"
           /></a>
         </div>
-        <h2 class="download">Christmas Text Maze</h2>
-        <div class="pdf-class">
-          <a href="docs/ChristmasTextMaze.pdf">
-            <img src="img/ChristmasTextMaze.jpg" alt="Christmas text maze"
-          /></a>
-        </div>
-        <h2 class="download">Clothes Text Maze</h2>
-        <div class="pdf-class">
-          <a href="docs/ClothesTextMaze.pdf">
-            <img src="img/ClothesTextMaze.jpg" alt="clothes text maze"
-          /></a>
         </div>
       </div>
 
