--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
         </div>
         <div class="item3">
 
-        <h2 class="download">Christmas Text Maze</h2>
+        <h2 class="download">Present Simple and Continuous Text Maze</h2>
         <div class="pdf-class item3">
-          <a href="docs/ChristmasTextMaze.pdf">
-            <img src="img/ChristmasTextMaze.jpg" alt="Christmas text maze"
+          <a href="docs/PSimpleContinuous.pdf">
+            <img src="img/PSimpleContinuous.jpg" alt="Christmas text maze"
           /></a>
         </div>
         </div>
@@ -123,6 +123,16 @@
           /></a>
         </div>
         </div>
+       <div class="item6">
+
+        <h2 class="download">Christmas Text Maze</h2>
+        <div class="pdf-class item3">
+          <a href="docs/ChristmasTextMaze.pdf">
+            <img src="img/ChristmasTextMaze.jpg" alt="Christmas text maze"
+          /></a>
+        </div>
+        </div>
+
       </div>
 
       <div class="links">
@@ -141,7 +151,10 @@
             <figcaption>Printable Bingo Games</figcaption>
           </div>
         </div>
-      </div>
+    
+
+
+  </div>
     </div>
     <footer class="footer">
       <div class="footer__copyright" id="footer">
