--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Free, printable ESL vocabulary text mazes for learning English"
+      content="Free, printable ESL vocabulary printable worksheets for learning English"
     />
-    <meta name="keywords" content="Text Maze ESL vocabulary" />
-    <title>Esl Text Mazes</title>
+    <meta name="keywords" content="Text Maze Dominoes Games Worksheets ESL vocabulary" />
+    <title>Esl-ology Printables</title>
     <link rel="icon" type="image/png" href="favicon.png" ; />
     <link rel="stylesheet" href="./css/styles.css" />
     <script
@@ -65,21 +65,35 @@
           <div class="dot" id="dot"><img src="img/favicon.png" alt="" /></div>
         </div>
         <div class="introduction__text">
-          <h1>TEXT MAZES</h1>
+          <h1>TEXT MAZES AND PRINTABLES</h1>
           <p>
-            Text mazes are a fun alterative to word searches and make great
-            warmers or mini breaks. In a traditional text maze students must
-            find all the letters in a paragraph of text — working horizontally
-            and vertically. Here we start with text mazes that cover vocabulary
-            related to vehicles, clothes and Christmas. There will be more to
-            come! <b style="font-weight: bold">Click on the mazes</b> to
-            download or print them — probably just print page 1 as the answer is
-            on page 2! Happy text mazing!
+            Esl-ology Printables are worksheets that are free to print and download. There are <b style="font-weight: bold">vocabulary dominoes</b>,
+<b style="font-weight: bold">word searches</b>, <b style="font-weight: bold">text mazes</b> and more.           Text mazes are a great alterative to traditional word searches and make great
+            warmers or mini breaks. Find all the letters in a paragraph of text — working horizontally
+            and vertically. <b style="font-weight: bold">Click on the printables</b> to
+            download or print them.
           </p>
         </div>
       </div>
 
       <div class="main">
+        <div class="item1 item">
+        <h2 class="download">Halloween Board Game</h2>
+        <div class="pdf-class">
+          <a href="docs/HalloweenBoardGame.pdf">
+            <img src="img/HalloweenBoardGame.jpg" alt="vehicles text maze"
+          /></a>
+        </div>
+        </div>
+         <div class="item2 item">
+        <h2 class="download">Halloween Dominoes </h2>
+        <div class="pdf-class item2">
+          <a href="docs/HalloweenDominoesPrintable.pdf">
+            <img src="img/HalloweenDominoes.jpg" alt="vehicles text maze"
+          /></a>
+        </div>
+        </div>
+
         <div class="item1">
         <h2 class="download">Frequency Adverbs Text Maze</h2>
         <div class="pdf-class">
@@ -96,7 +110,10 @@
           /></a>
         </div>
         </div>
-        <div class="item3">
+
+
+
+        <div class="item3 item">
 
         <h2 class="download">Present Simple and Continuous Text Maze</h2>
         <div class="pdf-class item3">
@@ -105,7 +122,7 @@
           /></a>
         </div>
         </div>
-                 <div class="item4">
+                 <div class="item4 item">
 
         <h2 class="download">Clothes Text Maze</h2>
         <div class="pdf-class item4">
@@ -115,7 +132,7 @@
         </div>
                  </div>
 
-                      <div class="item5">
+                      <div class="item5 item">
         <h2 class="download">Vehicles Text Maze</h2>
         <div class="pdf-class">
           <a href="docs/VehiclesTextMaze.pdf">
@@ -129,6 +146,15 @@
         <div class="pdf-class item3">
           <a href="docs/ChristmasTextMaze.pdf">
             <img src="img/ChristmasTextMaze.jpg" alt="Christmas text maze"
+          /></a>
+        </div>
+        </div>
+       <div class="item1">
+
+        <h2 class="download">Vehicles Word Search</h2>
+        <div class="pdf-class item3">
+          <a href="docs/VehiclesWordSearch.pdf">
+            <img src="img/VehiclesWordsearch.jpg" alt="Christmas text maze"
           /></a>
         </div>
         </div>
