Added more material

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       </div>
 
       <div class="main">
+
         <div class="item1 item">
         <h2 class="download">Halloween Board Game</h2>
         <div class="pdf-class">
@@ -85,16 +86,17 @@
           /></a>
         </div>
         </div>
+
          <div class="item2 item">
         <h2 class="download">Halloween Dominoes </h2>
-        <div class="pdf-class item2">
+        <div class="pdf-class">
           <a href="docs/HalloweenDominoesPrintable.pdf">
             <img src="img/HalloweenDominoes.jpg" alt="vehicles text maze"
           /></a>
         </div>
         </div>
 
-        <div class="item1">
+        <div class="item3 item">
         <h2 class="download">Frequency Adverbs Text Maze</h2>
         <div class="pdf-class">
           <a href="docs/FrequencyAdverbsTextMaze.pdf">
@@ -102,37 +104,35 @@
           /></a>
         </div>
         </div>
-         <div class="item2">
+
+         <div class="item">
         <h2 class="download">Past Simple Text Maze</h2>
-        <div class="pdf-class item2">
+        <div class="pdf-class">
           <a href="docs/PastSimpleTextMaze.pdf">
             <img src="img/PastSimpleTextMaze.jpg" alt="vehicles text maze"
           /></a>
         </div>
         </div>
 
-
-
-        <div class="item3 item">
-
-        <h2 class="download">Present Simple and Continuous Text Maze</h2>
-        <div class="pdf-class item3">
+        <div class="item">
+        <h2 class="download">Present Tenses Text Maze</h2>
+        <div class="pdf-class ">
           <a href="docs/PSimpleContinuous.pdf">
             <img src="img/PSimpleContinuous.jpg" alt="Christmas text maze"
           /></a>
         </div>
         </div>
-                 <div class="item4 item">
-
+                 
+        <div class="item">
         <h2 class="download">Clothes Text Maze</h2>
-        <div class="pdf-class item4">
+        <div class="pdf-class">
           <a href="docs/ClothesTextMaze.pdf">
             <img src="img/ClothesTextMaze.jpg" alt="clothes text maze"
           /></a>
         </div>
-                 </div>
+        </div>
 
-                      <div class="item5 item">
+        <div class="item">
         <h2 class="download">Vehicles Text Maze</h2>
         <div class="pdf-class">
           <a href="docs/VehiclesTextMaze.pdf">
@@ -140,17 +140,17 @@
           /></a>
         </div>
         </div>
-       <div class="item6">
 
+       <div class="item6">
         <h2 class="download">Christmas Text Maze</h2>
-        <div class="pdf-class item3">
+        <div class="pdf-class">
           <a href="docs/ChristmasTextMaze.pdf">
             <img src="img/ChristmasTextMaze.jpg" alt="Christmas text maze"
           /></a>
         </div>
         </div>
-       <div class="item1">
 
+       <div class="item">
         <h2 class="download">Vehicles Word Search</h2>
         <div class="pdf-class item3">
           <a href="docs/VehiclesWordSearch.pdf">
