--- a/index.html
+++ b/index.html
@@ -55,6 +55,21 @@
     </div>
 
     <div id="wrapper" class="wrapper">
+
+   <div class="sense">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6192312197226967"
+     data-ad-slot="3073690633"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+
       <div class="sidebar-container" id="sidebar">
         <div data-include="sidebar.html"></div>
       </div>
@@ -79,19 +94,19 @@
       <div class="main">
 
         <div class="item1 item">
-        <h2 class="download">Halloween Board Game</h2>
+        <h2 class="download">Sports Go Fish Cards</h2>
         <div class="pdf-class">
-          <a href="docs/HalloweenBoardGame.pdf">
-            <img src="img/HalloweenBoardGame.jpg" alt="vehicles text maze"
+          <a href="docs/SportsGoFish.pdf">
+            <img src="img/SportsGoFish.jpg" alt="vehicles text maze"
           /></a>
         </div>
         </div>
 
          <div class="item2 item">
-        <h2 class="download">Halloween Dominoes </h2>
+        <h2 class="download">Sports Dominoes </h2>
         <div class="pdf-class">
-          <a href="docs/HalloweenDominoesPrintable.pdf">
-            <img src="img/HalloweenDominoes.jpg" alt="vehicles text maze"
+          <a href="docs/SportsDominoes.pdf">
+            <img src="img/SportsDominoes.jpg" alt="vehicles text maze"
           /></a>
         </div>
         </div>
@@ -159,6 +174,24 @@
         </div>
         </div>
 
+                <div class="item">
+        <h2 class="download">Halloween Board Game</h2>
+        <div class="pdf-class">
+          <a href="docs/HalloweenBoardGame.pdf">
+            <img src="img/HalloweenBoardGame.jpg" alt="vehicles text maze"
+          /></a>
+        </div>
+        </div>
+
+         <div class="item">
+        <h2 class="download">Halloween Dominoes </h2>
+        <div class="pdf-class">
+          <a href="docs/HalloweenDominoesPrintable.pdf">
+            <img src="img/HalloweenDominoes.jpg" alt="vehicles text maze"
+          /></a>
+        </div>
+        </div>
+
       </div>
 
       <div class="links">
@@ -177,10 +210,24 @@
             <figcaption>Printable Bingo Games</figcaption>
           </div>
         </div>
-    
+      </div>
+
+<div class="sense-bottom">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Vertical ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6192312197226967"
+     data-ad-slot="3073690633"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 
 
-  </div>
+
     </div>
     <footer class="footer">
       <div class="footer__copyright" id="footer">
