Sports Board Game

--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
         </div>
 
         <div class="item3 item">
+        <h2 class="download">Sports Board Game</h2>
+        <div class="pdf-class">
+          <a href="docs/SportsBoardGame.pdf">
+            <img src="img/SportsBoardGame.png" alt="vehicles text maze"
+          /></a>
+        </div>
+        </div>
+
+        <div class="item item">
         <h2 class="download">Frequency Adverbs Text Maze</h2>
         <div class="pdf-class">
           <a href="docs/FrequencyAdverbsTextMaze.pdf">
