--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
       name="description"
       content="Free, printable ESL vocabulary printable worksheets for learning English"
     />
-    <meta name="keywords" content="Text Maze Dominoes Games Worksheets ESL vocabulary" />
+    <meta
+      name="keywords"
+      content="Text Maze Dominoes Games Worksheets ESL vocabulary"
+    />
     <title>Esl-ology Printables</title>
     <link rel="icon" type="image/png" href="favicon.png" ; />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -55,20 +58,24 @@
     </div>
 
     <div id="wrapper" class="wrapper">
+      <div class="sense">
+        <script
+          async
+          src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+        ></script>
 
-   <div class="sense">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6192312197226967"
-     data-ad-slot="3073690633"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+        <ins
+          class="adsbygoogle"
+          style="display: block"
+          data-ad-client="ca-pub-6192312197226967"
+          data-ad-slot="3073690633"
+          data-ad-format="auto"
+          data-full-width-responsive="true"
+        ></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
 
       <div class="sidebar-container" id="sidebar">
         <div data-include="sidebar.html"></div>
@@ -82,125 +89,141 @@
         <div class="introduction__text">
           <h1>TEXT MAZES AND PRINTABLES</h1>
           <p>
-            Esl-ology Printables are worksheets that are free to print and download. There are <b style="font-weight: bold">vocabulary dominoes</b>,
-<b style="font-weight: bold">word searches</b>, <b style="font-weight: bold">text mazes</b> and more.           Text mazes are a great alterative to traditional word searches and make great
-            warmers or mini breaks. Find all the letters in a paragraph of text — working horizontally
-            and vertically. <b style="font-weight: bold">Click on the printables</b> to
-            download or print them.
+            Esl-ology Printables are worksheets that are free to print and
+            download. There are
+            <b style="font-weight: bold">vocabulary dominoes</b>,
+            <b style="font-weight: bold">word searches</b>,
+            <b style="font-weight: bold">text mazes</b> and more. Text mazes are
+            a great alterative to traditional word searches and make great
+            warmers or mini breaks. Find all the letters in a paragraph of text
+            — working horizontally and vertically.
+            <b style="font-weight: bold">Click on the printables</b> to download
+            or print them.
           </p>
         </div>
       </div>
 
       <div class="main">
-
         <div class="item1 item">
-        <h2 class="download">Sports Go Fish Cards</h2>
-        <div class="pdf-class">
-          <a href="docs/SportsGoFish.pdf">
-            <img src="img/SportsGoFish.jpg" alt="vehicles text maze"
-          /></a>
-        </div>
+          <h2 class="download">Sports Go Fish Cards</h2>
+          <div class="pdf-class">
+            <a href="docs/SportsGoFish.pdf">
+              <img src="img/SportsGoFish.jpg" alt="vehicles text maze"
+            /></a>
+          </div>
         </div>
 
-         <div class="item2 item">
-        <h2 class="download">Sports Dominoes </h2>
-        <div class="pdf-class">
-          <a href="docs/SportsDominoes.pdf">
-            <img src="img/SportsDominoes.jpg" alt="vehicles text maze"
-          /></a>
-        </div>
+        <div class="item2 item">
+          <h2 class="download">Sports Dominoes</h2>
+          <div class="pdf-class">
+            <a href="docs/SportsDominoes.pdf">
+              <img src="img/SportsDominoes.jpg" alt="vehicles text maze"
+            /></a>
+          </div>
         </div>
 
         <div class="item3 item">
-        <h2 class="download">Sports Board Game</h2>
-        <div class="pdf-class">
-          <a href="docs/SportsBoardGame.pdf">
-            <img src="img/SportsBoardGame.png" alt="vehicles text maze"
-          /></a>
-        </div>
+          <h2 class="download">Sports Board Game</h2>
+          <div class="pdf-class">
+            <a href="docs/SportsBoardGame.pdf">
+              <img src="img/SportsBoardGame.png" alt="vehicles text maze"
+            /></a>
+          </div>
         </div>
 
         <div class="item item">
-        <h2 class="download">Frequency Adverbs Text Maze</h2>
-        <div class="pdf-class">
-          <a href="docs/FrequencyAdverbsTextMaze.pdf">
-            <img src="img/FrequencyAdverbsTextMaze.jpg" alt="vehicles text maze"
-          /></a>
-        </div>
-        </div>
-
-         <div class="item">
-        <h2 class="download">Past Simple Text Maze</h2>
-        <div class="pdf-class">
-          <a href="docs/PastSimpleTextMaze.pdf">
-            <img src="img/PastSimpleTextMaze.jpg" alt="vehicles text maze"
-          /></a>
-        </div>
+          <h2 class="download">Comparisons Text Maze</h2>
+          <div class="pdf-class">
+            <a href="docs/ComparativesSuperlativesTextMaze.pdf">
+              <img
+                src="img/ComparativesSuperlativesTextMaze.jpg"
+                alt="vehicles text maze"
+            /></a>
+          </div>
         </div>
 
-        <div class="item">
-        <h2 class="download">Present Tenses Text Maze</h2>
-        <div class="pdf-class ">
-          <a href="docs/PSimpleContinuous.pdf">
-            <img src="img/PSimpleContinuous.jpg" alt="Christmas text maze"
-          /></a>
-        </div>
-        </div>
-                 
-        <div class="item">
-        <h2 class="download">Clothes Text Maze</h2>
-        <div class="pdf-class">
-          <a href="docs/ClothesTextMaze.pdf">
-            <img src="img/ClothesTextMaze.jpg" alt="clothes text maze"
-          /></a>
-        </div>
+        <div class="item item">
+          <h2 class="download">Frequency Adverbs Text Maze</h2>
+          <div class="pdf-class">
+            <a href="docs/FrequencyAdverbsTextMaze.pdf">
+              <img
+                src="img/FrequencyAdverbsTextMaze.jpg"
+                alt="vehicles text maze"
+            /></a>
+          </div>
         </div>
 
         <div class="item">
-        <h2 class="download">Vehicles Text Maze</h2>
-        <div class="pdf-class">
-          <a href="docs/VehiclesTextMaze.pdf">
-            <img src="img/VehiclesTextMaze.jpg" alt="vehicles text maze"
-          /></a>
-        </div>
-        </div>
-
-       <div class="item6">
-        <h2 class="download">Christmas Text Maze</h2>
-        <div class="pdf-class">
-          <a href="docs/ChristmasTextMaze.pdf">
-            <img src="img/ChristmasTextMaze.jpg" alt="Christmas text maze"
-          /></a>
-        </div>
+          <h2 class="download">Past Simple Text Maze</h2>
+          <div class="pdf-class">
+            <a href="docs/PastSimpleTextMaze.pdf">
+              <img src="img/PastSimpleTextMaze.jpg" alt="vehicles text maze"
+            /></a>
+          </div>
         </div>
 
-       <div class="item">
-        <h2 class="download">Vehicles Word Search</h2>
-        <div class="pdf-class item3">
-          <a href="docs/VehiclesWordSearch.pdf">
-            <img src="img/VehiclesWordsearch.jpg" alt="Christmas text maze"
-          /></a>
-        </div>
-        </div>
-
-                <div class="item">
-        <h2 class="download">Halloween Board Game</h2>
-        <div class="pdf-class">
-          <a href="docs/HalloweenBoardGame.pdf">
-            <img src="img/HalloweenBoardGame.jpg" alt="vehicles text maze"
-          /></a>
-        </div>
+        <div class="item">
+          <h2 class="download">Present Tenses Text Maze</h2>
+          <div class="pdf-class">
+            <a href="docs/PSimpleContinuous.pdf">
+              <img src="img/PSimpleContinuous.jpg" alt="Christmas text maze"
+            /></a>
+          </div>
         </div>
 
-         <div class="item">
-        <h2 class="download">Halloween Dominoes </h2>
-        <div class="pdf-class">
-          <a href="docs/HalloweenDominoesPrintable.pdf">
-            <img src="img/HalloweenDominoes.jpg" alt="vehicles text maze"
-          /></a>
-        </div>
+        <div class="item">
+          <h2 class="download">Clothes Text Maze</h2>
+          <div class="pdf-class">
+            <a href="docs/ClothesTextMaze.pdf">
+              <img src="img/ClothesTextMaze.jpg" alt="clothes text maze"
+            /></a>
+          </div>
         </div>
 
+        <div class="item">
+          <h2 class="download">Vehicles Text Maze</h2>
+          <div class="pdf-class">
+            <a href="docs/VehiclesTextMaze.pdf">
+              <img src="img/VehiclesTextMaze.jpg" alt="vehicles text maze"
+            /></a>
+          </div>
+        </div>
+
+        <div class="item6">
+          <h2 class="download">Christmas Text Maze</h2>
+          <div class="pdf-class">
+            <a href="docs/ChristmasTextMaze.pdf">
+              <img src="img/ChristmasTextMaze.jpg" alt="Christmas text maze"
+            /></a>
+          </div>
+        </div>
+
+        <div class="item">
+          <h2 class="download">Vehicles Word Search</h2>
+          <div class="pdf-class item3">
+            <a href="docs/VehiclesWordSearch.pdf">
+              <img src="img/VehiclesWordsearch.jpg" alt="Christmas text maze"
+            /></a>
+          </div>
+        </div>
+
+        <div class="item">
+          <h2 class="download">Halloween Board Game</h2>
+          <div class="pdf-class">
+            <a href="docs/HalloweenBoardGame.pdf">
+              <img src="img/HalloweenBoardGame.jpg" alt="vehicles text maze"
+            /></a>
+          </div>
+        </div>
+
+        <div class="item">
+          <h2 class="download">Halloween Dominoes</h2>
+          <div class="pdf-class">
+            <a href="docs/HalloweenDominoesPrintable.pdf">
+              <img src="img/HalloweenDominoes.jpg" alt="vehicles text maze"
+            /></a>
+          </div>
+        </div>
       </div>
 
       <div class="links">
@@ -221,22 +244,24 @@
         </div>
       </div>
 
-<div class="sense-bottom">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Vertical ad -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6192312197226967"
-     data-ad-slot="3073690633"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
-
-
-
+      <div class="sense-bottom">
+        <script
+          async
+          src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+        ></script>
+        <!-- Vertical ad -->
+        <ins
+          class="adsbygoogle"
+          style="display: block"
+          data-ad-client="ca-pub-6192312197226967"
+          data-ad-slot="3073690633"
+          data-ad-format="auto"
+          data-full-width-responsive="true"
+        ></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
     </div>
     <footer class="footer">
       <div class="footer__copyright" id="footer">
