--- a/index.html
+++ b/index.html
@@ -122,7 +122,25 @@
           </div>
         </div>
 
-        <div class="item3 item">
+ <div class="item3 item ppt">
+          <h2 class="download">Foods Go Fish Cards</h2>
+          <div class="pdf-class">
+            <a href="docs/FoodsGoFish.pdf">
+              <img src="img/FoodsGoFish.png" alt="PreIntermediate Powerpoint Game"
+            /></a>
+          </div>
+        </div>
+
+        <div class="item ppt">
+          <h2 class="download">Pre-Int Jeopardy Game</h2>
+          <div class="ppt-class">
+            <a href="docs/PRE-INTERMILLIONAIRE.ppt">
+              <img src="img/preinterm.png" alt="PreIntermediate Powerpoint Game"
+            /></a>
+          </div>
+        </div>
+
+        <div class="item">
           <h2 class="download">Sports Board Game</h2>
           <div class="pdf-class">
             <a href="docs/SportsBoardGame.pdf">
