Animals Go Fish

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <h2 class="download">Sports Go Fish Cards</h2>
           <div class="pdf-class">
             <a href="docs/SportsGoFish.pdf">
-              <img src="img/SportsGoFish.jpg" alt="vehicles text maze"
+              <img src="img/SportsGoFish.jpg" alt="Sports go fish cards"
             /></a>
           </div>
         </div>
@@ -117,7 +117,7 @@
           <h2 class="download">Sports Dominoes</h2>
           <div class="pdf-class">
             <a href="docs/SportsDominoes.pdf">
-              <img src="img/SportsDominoes.jpg" alt="vehicles text maze"
+              <img src="img/SportsDominoes.jpg" alt="Sports dominoes"
             /></a>
           </div>
         </div>
@@ -126,7 +126,7 @@
           <h2 class="download">Foods Go Fish Cards</h2>
           <div class="pdf-class">
             <a href="docs/FoodsGoFish.pdf">
-              <img src="img/FoodsGoFish.png" alt="PreIntermediate Powerpoint Game"
+              <img src="img/FoodsGoFish.png" alt="Foods Go Fish Cards"
             /></a>
           </div>
         </div>
@@ -144,7 +144,18 @@
           <h2 class="download">Sports Board Game</h2>
           <div class="pdf-class">
             <a href="docs/SportsBoardGame.pdf">
-              <img src="img/SportsBoardGame.png" alt="vehicles text maze"
+              <img src="img/SportsBoardGame.png" alt="Sports Board Game"
+            /></a>
+          </div>
+        </div>
+
+        <div class="item item">
+          <h2 class="download">Animals Go Fish Cards</h2>
+          <div class="pdf-class">
+            <a href="docs/AnimalsGoFish.pdf">
+              <img
+                src="img/AnimalsGoFish.png"
+                alt="Animals go fish cards"
             /></a>
           </div>
         </div>
@@ -155,7 +166,7 @@
             <a href="docs/ComparativesSuperlativesTextMaze.pdf">
               <img
                 src="img/ComparativesSuperlativesTextMaze.jpg"
-                alt="vehicles text maze"
+                alt="comparatives superlatives text maze"
             /></a>
           </div>
         </div>
@@ -166,7 +177,7 @@
             <a href="docs/FrequencyAdverbsTextMaze.pdf">
               <img
                 src="img/FrequencyAdverbsTextMaze.jpg"
-                alt="vehicles text maze"
+                alt="Adverbs text maze"
             /></a>
           </div>
         </div>
@@ -175,7 +186,7 @@
           <h2 class="download">Past Simple Text Maze</h2>
           <div class="pdf-class">
             <a href="docs/PastSimpleTextMaze.pdf">
-              <img src="img/PastSimpleTextMaze.jpg" alt="vehicles text maze"
+              <img src="img/PastSimpleTextMaze.jpg" alt="Past simple text maze"
             /></a>
           </div>
         </div>
@@ -184,7 +195,7 @@
           <h2 class="download">Present Tenses Text Maze</h2>
           <div class="pdf-class">
             <a href="docs/PSimpleContinuous.pdf">
-              <img src="img/PSimpleContinuous.jpg" alt="Christmas text maze"
+              <img src="img/PSimpleContinuous.jpg" alt="Present Temses text maze"
             /></a>
           </div>
         </div>
@@ -220,7 +231,7 @@
           <h2 class="download">Vehicles Word Search</h2>
           <div class="pdf-class item3">
             <a href="docs/VehiclesWordSearch.pdf">
-              <img src="img/VehiclesWordsearch.jpg" alt="Christmas text maze"
+              <img src="img/VehiclesWordsearch.jpg" alt="Vehicles word search"
             /></a>
           </div>
         </div>
@@ -229,7 +240,7 @@
           <h2 class="download">Halloween Board Game</h2>
           <div class="pdf-class">
             <a href="docs/HalloweenBoardGame.pdf">
-              <img src="img/HalloweenBoardGame.jpg" alt="vehicles text maze"
+              <img src="img/HalloweenBoardGame.jpg" alt="Halloween Board Game"
             /></a>
           </div>
         </div>
@@ -238,7 +249,7 @@
           <h2 class="download">Halloween Dominoes</h2>
           <div class="pdf-class">
             <a href="docs/HalloweenDominoesPrintable.pdf">
-              <img src="img/HalloweenDominoes.jpg" alt="vehicles text maze"
+              <img src="img/HalloweenDominoes.jpg" alt="Halloween dominoes"
             /></a>
           </div>
         </div>
