Added jobs & narrow ads

--- a/index.html
+++ b/index.html
@@ -58,24 +58,18 @@
     </div>
 
     <div id="wrapper" class="wrapper">
-      <div class="sense">
-        <script
-          async
-          src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-        ></script>
-
-        <ins
-          class="adsbygoogle"
-          style="display: block"
-          data-ad-client="ca-pub-6192312197226967"
-          data-ad-slot="3073690633"
-          data-ad-format="auto"
-          data-full-width-responsive="true"
-        ></ins>
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-      </div>
+    <div class="sense">
+    </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXX11XXX9" crossorigin="anonymous"></script>
+    <!-- mainpage_top -->
+    <ins class="adsbygoogle mainpage_top"
+         style="display:inline-block"
+         data-ad-client="ca-pub-6192312197226967"
+         data-ad-slot="3393588944"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    </div>
 
       <div class="sidebar-container" id="sidebar">
         <div data-include="sidebar.html"></div>
@@ -105,10 +99,10 @@
 
       <div class="main">
         <div class="item1 item">
-          <h2 class="download">Sports Go Fish Cards</h2>
+          <h2 class="download">Get a Job Game</h2>
           <div class="pdf-class">
-            <a href="docs/SportsGoFish.pdf">
-              <img src="img/SportsGoFish.jpg" alt="Sports go fish cards"
+            <a href="docs/JobBoardGame.pdf">
+              <img src="img/JobBoardGame.png" alt="Sports go fish cards"
             /></a>
           </div>
         </div>
@@ -127,6 +121,15 @@
           <div class="pdf-class">
             <a href="docs/FoodsGoFish.pdf">
               <img src="img/FoodsGoFish.png" alt="Foods Go Fish Cards"
+            /></a>
+          </div>
+        </div>
+
+            <div class="item">
+          <h2 class="download">Sports Go Fish Cards</h2>
+          <div class="pdf-class">
+            <a href="docs/SportsGoFish.pdf">
+              <img src="img/SportsGoFish.jpg" alt="Sports go fish cards"
             /></a>
           </div>
         </div>
