--- a/index.html
+++ b/index.html
@@ -98,7 +98,26 @@
       </div>
 
       <div class="main">
+
         <div class="item1 item">
+          <h2 class="download">Job Go Fish Cards</h2>
+          <div class="pdf-class">
+            <a href="docs/JobsGoFish.pdf">
+              <img src="img/JobsGoFish.png" alt="Jobs go fish cards"
+            /></a>
+          </div>
+        </div>
+
+        <div class="item2 item">
+          <h2 class="download">Fortnite Fever Text Maze</h2>
+          <div class="pdf-class">
+            <a href="docs/FORTNITE FEVER.pdf">
+              <img src="img/FortniteFever.png" alt="Fortnite Text Maze"
+            /></a>
+          </div>
+        </div>
+
+           <div class="item3 item">
           <h2 class="download">Get a Job Game</h2>
           <div class="pdf-class">
             <a href="docs/JobBoardGame.pdf">
@@ -107,7 +126,7 @@
           </div>
         </div>
 
-        <div class="item2 item">
+             <div class="item item">
           <h2 class="download">Sports Dominoes</h2>
           <div class="pdf-class">
             <a href="docs/SportsDominoes.pdf">
@@ -116,7 +135,7 @@
           </div>
         </div>
 
- <div class="item3 item ppt">
+ <div class="item item ppt">
           <h2 class="download">Foods Go Fish Cards</h2>
           <div class="pdf-class">
             <a href="docs/FoodsGoFish.pdf">
